--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ rich-toolkit==0.13.2
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.37
+sqlmodel==0.0.22
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
