--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+cachetools==5.5.1
 certifi==2025.1.31
 click==8.1.8
 dnspython==2.7.0
@@ -13,13 +14,17 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
+pytest==8.3.4
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -30,6 +35,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.37
 sqlmodel==0.0.22
 starlette==0.45.3
+tomli==2.2.1
 typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
